--- a/style1.css
+++ b/style1.css
@@ -20,21 +20,24 @@ body {
     z-index: 9999 !important;
   }
   .navbar {
-    margin-bottom: 0px;
+    margin: 0px 0px;
+    height: 10%;
+    width: 102%;
   }
+ 
 
   .affix ~ .container-fluid {
    position: relative;
-   top: 50px;
+   top: 50px;    /*50*/
   }
 
 .affix + .container-fluid {
-    padding-top: 70px;
+    padding-top: 70px;    /*70*/
   }
   #topBtn {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 20px;    /*20*/
     right: 30px;
     z-index: 99;
     font-size: 18px;
@@ -56,4 +59,41 @@ body {
       background-color: #000000;
       border-radius: 50% ;
   }
- 
+/* .nav-item{
+  font-size: 1.2rem;
+} */
+
+
+
+ .small-text{
+   font-size: 0.75rem;
+ }
+ .col-sm-12.container-fluid{
+  padding-top:70px;
+  padding-bottom:70px;
+ }
+ #about_me,#certificates,#portfolio{
+  font-size: 1.3rem;
+}
+.navbar-brand{
+  font-size: 2rem;
+}
+.navbar-toggler-icon{
+        vertical-align: super;
+}
+
+.navbar-nav .nav-link{
+  font-size: 1.25rem;
+}
+
+
+
+
+/*desktop here*/
+@media screen and (min-width:768px){
+  .col-sm-12.container-fluid{
+    font-size: 1.4rem;
+  }
+}
+
+
